@@ -59,8 +59,8 @@
 ;LiveSpinner 1
 
 # default query mode
-# 0 = normal, 1 = days, 2 = months, 3 = top, 5 = short, 7 = hours graph
-# 8 = xml, 9 = one line, 10 = json, 11 = hours, 12 = 5 minute
+# 0 = summary, 1 = days, 2 = months, 3 = top, 4 = single summary, 5 = short,
+# 7 = hours graph, 8 = xml, 9 = one line, 10 = json, 11 = hours, 12 = 5 minute
 ;QueryMode 0
 
 # default list output entry limits (0 = all)
