@@ -1,4 +1,4 @@
-.TH VNSTAT.CONF 5 "AUGUST 2023" "version 2.11" "User Manuals"
+.TH VNSTAT.CONF 5 "DECEMBER 2023" "version 2.12" "User Manuals"
 .SH NAME
 vnstat.conf \- vnStat configuration file
 
@@ -142,9 +142,9 @@ output, 3 = rate column is visible in all outputs where it is supported.
 
 .TP
 .B QueryMode
-Default query mode when no parameters are given. 0 = normal, 1 = days,
-2 = months, 3 = top, 5 = short, 6 = years, 7 = hours graph, 8 = xml, 9 = one line,
-10 = json, 11 = hours and 12 = 5 minute. (vnstat only)
+Default query mode when no parameters are given. 0 = summary, 1 = days,
+2 = months, 3 = top, 4 = single summary, 5 = short, 6 = years, 7 = hours graph,
+8 = xml, 9 = one line, 10 = json, 11 = hours and 12 = 5 minute. (vnstat only)
 
 .TP
 .B RateUnit
