@@ -90,7 +90,7 @@ void printcfgfile(void)
 	printf("LiveSpinner %d\n\n", cfg.livespinner);
 
 	printf("# default query mode\n");
-	printf("# 0 = normal, 1 = days, 2 = months, 3 = top, 5 = short, 7 = hours graph\n");
+	printf("# 0 = summary, 1 = days, 2 = months, 3 = top, 4 = single summary, 5 = short, 7 = hours graph\n");
 	printf("# 8 = xml, 9 = one line, 10 = json, 11 = hours, 12 = 5 minute\n");
 	defaultcomment(cfg.qmode == DEFQMODE);
 	printf("QueryMode %d\n\n", cfg.qmode);
